# soksak-sidecar-terminal-wezterm

./: Cargo.toml  README.md  THIRD-PARTY-NOTICES  stage.sh
.github/workflows/: release.yml
release/: unit.json
scripts/: build-release.mjs  gate.sh  release-contract.mjs
scripts/e2e/: ptyd-integration.sh
src/: checkpoint.rs  daemon.rs  engine.rs  lib.rs  main.rs  mirror.rs  proto.rs  service.rs
tests/: bench.rs  conformance.rs  feed_profile.rs  ptyd_integration.rs  service_down.rs
tests/common/: mod.rs
